--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,15 @@
         }
     ],
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "symfony/console": "^5.1",
+        "symfony/dependency-injection": "^5.1",
+        "guzzlehttp/guzzle": "^7.0",
+        "symfony/yaml": "^5.1",
+        "symfony/config": "^5.1",
+      "ext-json": "*",
+      "ext-pdo": "*",
+        "illuminate/database": "^7.21"
     },
     "autoload": {
         "psr-4": {
