--- a/.docker/php/xdebug-configuration.ini
+++ b/.docker/php/xdebug-configuration.ini
@@ -1,4 +1,7 @@
 xdebug.remote_enable=1
 xdebug.remote_autostart=on
-xdebug.remote_connect_back=on
-xdebug.remote_host="localhost"
+xdebug.remote_host=host.docker.internal
+xdebug.remote_connect_back=off
+xdebug.remote_port=9005
+xdebug.idekey=PHPSTORM
+xdebug.max_nesting_level=1500
