--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,26 @@
 {
-    "name": "algirdasd/supermetrics",
-    "authors": [
-        {
-            "name": "Algirdas Dumskis",
-            "email": "algirdasdum@gmail.com"
-        }
-    ],
-    "require": {
-        "php": "^7.4",
-        "symfony/console": "^5.1",
-        "symfony/dependency-injection": "^5.1",
-        "guzzlehttp/guzzle": "^7.0",
-        "symfony/yaml": "^5.1",
-        "symfony/config": "^5.1",
-      "ext-json": "*",
-      "ext-pdo": "*",
-        "illuminate/database": "^7.21"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/"
-        }
+  "name": "algirdasd/supermetrics",
+  "authors": [
+    {
+      "name": "Algirdas Dumskis",
+      "email": "algirdasdum@gmail.com"
     }
+  ],
+  "require": {
+    "php": "^7.4",
+    "symfony/console": "^5.1",
+    "symfony/dependency-injection": "^5.1",
+    "guzzlehttp/guzzle": "^7.0",
+    "symfony/yaml": "^5.1",
+    "symfony/config": "^5.1",
+    "illuminate/database": "^7.21",
+    "ext-json": "*",
+    "ext-pdo": "*",
+    "ext-redis": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/"
+    }
+  }
 }
