--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,14 @@ services:
     volumes:
       - supermetrics_db_data:/var/lib/mysql
 
+  redis:
+    image: redis:6.0.5-buster
+    container_name: supermetrics_redis
+    ports:
+      - 8082:6379
+    networks:
+      - supermetrics
+
 volumes:
   supermetrics_db_data:
     driver: local
